Add link to insta

--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -110,31 +110,33 @@
                 </div>
             </div>
             <!-- latest instagram posts -->
-            <div class="latest-posts">
-                <div class="latest-post-item">
-                    <div class="latest-post-text">
-                        <h3 class="sect-subtitle">Latest Posts</h3>
-                        <div class="latest-post-ig">
-                            <i class="fab fa-instagram"></i>
+            <a href="https://www.instagram.com/theroadblockcoach/?hl=en" target="_blank">
+                <div class="latest-posts">
+                    <div class="latest-post-item">
+                        <div class="latest-post-text">
+                            <h3 class="sect-subtitle">Latest Posts</h3>
+                            <div class="latest-post-ig">
+                                <i class="fab fa-instagram"></i>
+                            </div>
                         </div>
                     </div>
+                    <div class="latest-post-item">
+                        <img src="/static/img/insta/feel-garden-comp2.jpg" alt="mhairi-life-coach-instagram-feel">
+                    </div>
+                    <div class="latest-post-item">
+                        <img src="/static/img/insta/sunday-comp2.jpg" alt="mhairi-life-coach-instagram-sunday">
+                    </div>
+                    <div class="latest-post-item">
+                        <img src="/static/img/insta/believe-comp2.jpg" alt="mhairi-life-coach-instagram-believe">
+                    </div>
+                    <div class="latest-post-item">
+                        <img src="/static/img/insta/succeed-comp2.jpg" alt="mhairi-life-coach-instagram-suceed">
+                    </div>
+                    <div class="latest-post-item">
+                        <img src="/static/img/insta/mindest-comp2.jpg" alt="mhairi-life-coach-instagram-mindset">
+                    </div>
                 </div>
-                <div class="latest-post-item">
-                    <img src="/static/img/insta/feel-garden-comp2.jpg" alt="mhairi-life-coach-instagram-feel">
-                </div>
-                <div class="latest-post-item">
-                    <img src="/static/img/insta/sunday-comp2.jpg" alt="mhairi-life-coach-instagram-sunday">
-                </div>
-                <div class="latest-post-item">
-                    <img src="/static/img/insta/believe-comp2.jpg" alt="mhairi-life-coach-instagram-believe">
-                </div>
-                <div class="latest-post-item">
-                    <img src="/static/img/insta/succeed-comp2.jpg" alt="mhairi-life-coach-instagram-suceed">
-                </div>
-                <div class="latest-post-item">
-                    <img src="/static/img/insta/mindest-comp2.jpg" alt="mhairi-life-coach-instagram-mindset">
-                </div>
-            </div>
+            </a>
             <!-- END: latest instagram posts -->
         </div>
         <!-- END: instagram footer -->
