--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -49,7 +49,7 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
 <section class="home-about">
     <div class="home-about-title">
         <h1 class="logo-2">Hey, I'm Mhairi</h1>
-        <h2 class="fw-b home-about-subtitle ml-1">
+        <h2 class="fw-b home-about-subtitle">
             THE TRANSFORMATION COACH FOR WOMEN WHO WANT A LIFE WITHOUT LIMITS
         </h2>
     </div>
@@ -170,10 +170,10 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
     <div class="why-mhairi-content">
         <div class="why-mhairi-title">
             <h2 class="logo-2">
-                Why Mhairi
+                Why Mhairi?
             </h2>
             <h3 class="home-about-subtitle fw-b">
-            Choosing the right coach for you is an important step in the process, I get it. So why me? 
+                Choosing the right coach for you is an important step in the process, I get it. So why me? 
             </h3>
         </div>
         <div class="home-about-img">
