--- a/static/scss/base/_typography.scss
+++ b/static/scss/base/_typography.scss
@@ -326,3 +326,7 @@ $font-la-parisienne: 'la-parisienne', serif;
 .italic{
   font-style: italic;
 }
+
+.fa-instagram{
+  color: $base-text-color;
+}
