--- a/static/scss/components/_quiz_full.scss
+++ b/static/scss/components/_quiz_full.scss
@@ -148,7 +148,7 @@ input[type='checkbox'] {
     border: none;
     font-size: 1.1em;
     padding: .6em 1.8em;
-    margin: 1em;
+    margin: .5em 1em;
     text-transform: uppercase;
     @media #{$breakpoint-md} {
         font-size: .8em;
