Re align look like text

--- a/src/site/about.njk
+++ b/src/site/about.njk
@@ -104,16 +104,20 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
                 </div>
                 <ul class="how-i-help-list">
                     <li class="normal-text how-i-help-text">
-                        - Wanting to alter aspects of where I was, but not knowing where to start or how to get there
+                        <p>-</p>
+                        Wanting to alter aspects of where I was, but not knowing where to start or how to get there
                     </li>
                     <li class="normal-text how-i-help-text">
-                        - Feeling immensely lost and vulnerable
+                        <p>-</p>
+                        Not being at all content or as centred in my life as I deserved to be
                     </li>
                     <li class="normal-text how-i-help-text">
-                        - Knowing I had talent, but feeling like a fraud
+                        <p>-</p>
+                        Knowing I had talent, but feeling like I was a fraud
                     </li>
                     <li class="normal-text how-i-help-text">
-                        - Not being at all content or as centred in my life as I deserved to be
+                        <p>-</p>
+                        Feeling immensely lost and vulnerable
                     </li>
                 </ul>
             </div>
@@ -126,16 +130,20 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
                 </div>
                 <ul class="how-i-help-list">
                     <li class="normal-text how-i-help-text">
-                        - I established sincere self-worth and unlocked the courage to make decisions for me
+                        <p>-</p> 
+                        I established sincere self-worth and unlocked the courage to make decisions for me
                     </li>
                     <li class="normal-text how-i-help-text">
-                        - I chose happiness based on what fed my soul 
+                        <p>-</p> 
+                        I listened to my gut and made decisions based on where I knew I wanted to be 
                     </li>
                     <li class="normal-text how-i-help-text">
-                        - I listened to my gut and made decisions based on where I knew I wanted to be 
+                        <p>-</p> 
+                        I achieved fulfillment and balance in every aspect of my life 
                     </li>
                     <li class="normal-text how-i-help-text">
-                        - I achieved fulfillment and balance in every aspect of my life 
+                        <p>-</p> 
+                        I chose happiness based on what fed my soul 
                     </li>
                 </ul>
             </div>
