--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -46,16 +46,26 @@ metaDescription: 'Accredited Transformational Coach helping you overcome stress,
             WHAT CAN THIS LOOK LIKE?
         </h3>
         <div class="look-like-fade">
-            <p class="look-like-item normal-text">Overcoming imposter syndrome to reach workplace goals</p>
             <p class="look-like-item normal-text">Creating a work/life balance that makes you equal parts fulfilled and happy</p>
             <p class="look-like-item normal-text">Learning to eliminate guilt and anxiety around becoming a mother or caring for your children</p>
-            <p class="look-like-item normal-text">Addressing low self-esteem and lack of confidence</p>
-            <p class="look-like-item normal-text">Developing techniques to handle overwhelming feelings or lack of control</p>
-            <p class="look-like-item normal-text">Combatting anxiety to move toward your dream life</p>
-            <p class="look-like-item normal-text">Breaking the cycle of negative thought patterns for a positive outlook</p>
-            <p class="look-like-item normal-text">Addressing feelings of uneasiness and not living your ideal version of life </p>
+            <p class="look-like-item look-like-spacer normal-text">·</p>
+            <p class="look-like-item look-like-spacer normal-text">·</p>
             <p class="look-like-item normal-text">Eliminating mental roadblocks stopping you from reaching career goals</p>
             <p class="look-like-item normal-text">Arming you with tools to get the most from your important relationships</p>
+            <p class="look-like-item look-like-spacer normal-text">·</p>
+            <p class="look-like-item look-like-spacer normal-text">·</p>
+            <p class="look-like-item normal-text">Developing techniques to handle overwhelming feelings or lack of control</p>
+            <p class="look-like-item normal-text">Addressing feelings of uneasiness and not living your ideal version of life </p>
+            <p class="look-like-item look-like-spacer normal-text">·</p>
+            <p class="look-like-item look-like-spacer normal-text">·</p>
+            <p class="look-like-item normal-text">Breaking the cycle of negative thought patterns for a positive outlook</p>
+            <p class="look-like-item normal-text">Combatting anxiety to move toward your dream life</p>
+            <p class="look-like-item look-like-spacer normal-text">·</p>
+            <p class="look-like-item look-like-spacer normal-text">·</p>
+            <p class="look-like-item normal-text">Overcoming imposter syndrome to reach workplace goals</p>
+            <p class="look-like-item normal-text">Addressing low self-esteem and lack of confidence</p>
+            <p class="look-like-item look-like-spacer normal-text">·</p>
+            <p class="look-like-item look-like-spacer normal-text">·</p>
             <p class="look-like-item normal-text">Forming techniques to aid productivity, consistency and focus</p>
             <p class="look-like-item normal-text">Tackling your inner critic and changing the dialogue</p>
         </div>
