--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -5807,6 +5806,9 @@ input[type='checkbox'] {
 
 .how-i-help-text {
   margin-bottom: 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 @media only screen and (min-width: 500px) and (max-width: 767px) {
@@ -5815,10 +5817,22 @@ input[type='checkbox'] {
   }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 991px) {
+@media only screen and (min-width: 768px) {
   .how-i-help-text {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    min-height: 3em;
     margin-bottom: 1em;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
+}
+
+.how-i-help-text p {
+  display: inline-block;
+  margin: 0 .7em 0 0;
 }
 
 .known-for {
@@ -9537,11 +9551,19 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 768px) {
   .look-like-fade .look-like-item {
-    -ms-flex-item-align: end;
-        -ms-grid-row-align: end;
-        align-self: end;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    padding: 0 .5em;
+    min-height: 2em;
     width: 40% !important;
     margin: var(--gap) 0 0 var(--gap);
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .look-like-fade .look-like-spacer {
+    min-height: 2em;
   }
 }
 
@@ -9812,12 +9834,6 @@ input[type='checkbox'] {
 
 .look-like-item {
   margin: 0;
-}
-
-.look-like-item::after {
-  content: "·";
-  display: block;
-  text-align: center;
 }
 
 .who-is-this-for {
