Change font sizes of exerts

--- a/src/site/about.njk
+++ b/src/site/about.njk
@@ -30,7 +30,8 @@ metaDescription: 'Accredited Transformational Coach dedicated to helping you ove
     <div class="testimonial-alone">
         <div class="testimonial-alone-exert">
             <p>
-                “I went from seemingly ‘having it all’ (but inwardly restless and full of self-doubt) to… divorced. It changed the game. Then my journey to happiness truly began.”
+                “I went from seemingly ‘having it all’ (but inwardly restless and full of self-doubt) to… divorced. <br>
+                It changed the game. Then my journey to happiness truly began.”
             </p>
         </div>
         <div class="testimonial-alone-author">
