--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -133,7 +133,7 @@ metaDescription: 'Accredited Transformational Coach helping you overcome stress,
                         Swift
                     </h2>
                     <p class="normal-text coaching-package-intro">
-                        Want to make valuable changes fast? This one's for you. DISC personality profiling will help discover how best to approach your personal roadblocks, and the most effective approach for quick, effective results.
+                        Want to make valuable changes fast? This one's for you. DISC personality profiling will help you discover how best to approach your personal roadblocks, and the most effective approach for quick, powerful results.
                     </p>
                     <figure class="includes-fig">
                         <figcaption class="sect-subtitle how-sub text-left">Includes:</figcaption>
@@ -192,7 +192,7 @@ metaDescription: 'Accredited Transformational Coach helping you overcome stress,
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                Personal Development Exercises
+                                Personal Acceleration Exercises
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
