Add mhairi changes

--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -126,10 +126,11 @@ metaDescription: 'Accredited Transformational Coach helping you overcome stress,
         <h3 class="sect-subtitle">
             Where will you begin?
         </h3>
+         <hr class="half-width-hr">
         <div class="signature-content">
             <div class="coaching-package-item">
                 <div class="signature-includes">
-                    <h2 class="sect-title fw-n signature-title">
+                    <h2 class="sect-title fw-n signature-title italic">
                         Swift
                     </h2>
                     <p class="normal-text coaching-package-intro">
@@ -169,7 +170,7 @@ metaDescription: 'Accredited Transformational Coach helping you overcome stress,
             <hr class="half-width-hr d-md-none">
             <div class="coaching-package-item">
                 <div class="signature-includes">
-                    <h2 class="sect-title fw-n signature-title">
+                    <h2 class="sect-title fw-n signature-title italic">
                         signature
                     </h2>
                     <p class="normal-text coaching-package-intro">
@@ -212,7 +213,7 @@ metaDescription: 'Accredited Transformational Coach helping you overcome stress,
             <hr class="half-width-hr d-md-none">
             <div class="coaching-package-item">
                 <div class="signature-includes">
-                    <h2 class="sect-title fw-n signature-title">
+                    <h2 class="sect-title fw-n signature-title italic">
                         Shift
                     </h2>
                     <p class="normal-text coaching-package-intro">
