--- a/src/site/contact.njk
+++ b/src/site/contact.njk
@@ -11,7 +11,7 @@ metaDescription: 'Book your free call with Mhairi Todd. Accredited Life Coach sp
         <div class="parallax-container contact-hero-parallax-window"></div>
         <div class="contact-hero-parallax">
             <h1 class="sect-title">
-                LET'S TALK!
+                LET'S CHAT!
             </h1>
             <h2 class="sect-subtitle">
                 I'M SCOTTISH, IT'S OUR FAVOURITE THING TO DO
