--- a/static/css/main.css
+++ b/static/css/main.css
@@ -543,7 +543,7 @@ template {
 
 .sect-title {
   font-family: "biko", serif;
-  font-size: 1.4em;
+  font-size: 1.5em;
   font-weight: 600;
   padding: 5px;
   text-transform: uppercase;
@@ -5039,7 +5039,7 @@ input[type='checkbox'] {
 
 .about-hero-img {
   text-align: center;
-  height: 28em;
+  height: 30em;
   width: 90vw;
   margin: auto;
 }
@@ -5050,7 +5050,7 @@ input[type='checkbox'] {
     -ms-grid-column-span: 2;
     grid-column: 2/4;
     width: 100%;
-    height: 21em;
+    height: 26em;
   }
 }
 
@@ -5060,7 +5060,7 @@ input[type='checkbox'] {
     -ms-grid-column-span: 2;
     grid-column: 2/4;
     width: 100%;
-    height: 23em;
+    height: 25em;
   }
 }
 
@@ -5079,7 +5079,7 @@ input[type='checkbox'] {
     -ms-grid-column: 2;
     -ms-grid-column-span: 2;
     grid-column: 2/4;
-    height: 18em;
+    height: 23em;
   }
 }
 
@@ -5100,16 +5100,16 @@ input[type='checkbox'] {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .about-hero-img img {
     width: 90%;
-    -o-object-position: 50% 20%;
-       object-position: 50% 20%;
+    -o-object-position: 50% 40%;
+       object-position: 50% 40%;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .about-hero-img img {
     width: 100%;
-    -o-object-position: 50% 20%;
-       object-position: 50% 20%;
+    -o-object-position: 50% 30%;
+       object-position: 50% 30%;
   }
 }
 
@@ -5120,6 +5120,16 @@ input[type='checkbox'] {
        object-fit: cover;
     -o-object-position: 50% 15%;
        object-position: 50% 15%;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .about-hero-img img {
+    width: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: 50% 35%;
+       object-position: 50% 35%;
   }
 }
 
