--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -3,14 +3,14 @@
 <head>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    {# <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180198864-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180198864-1"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'UA-180198864-1');
-    </script> #}
+    </script>
 
    
 
