--- a/src/site/contact.njk
+++ b/src/site/contact.njk
@@ -49,7 +49,7 @@ metaDescription: 'Book your free call with Mhairi Todd. Accredited Life Coach sp
                         </div>
                         <div class="form-group hear">
                             <hr class="form-hr">
-                            <input type="text" class="form-field" id="hear-field" placeholder="How did you hear about Mhairi?" required>
+                            <input type="text" name="How did you hear about Mhairi?" class="form-field" id="hear-field" placeholder="How did you hear about Mhairi?" required>
                         </div>
                         <div class="form-group message">
                             <hr class="form-hr">
