--- a/static/scss/components/_navbar.scss
+++ b/static/scss/components/_navbar.scss
@@ -14,40 +14,39 @@ $nav-toggle-z-index: 2;
   background: $light-pink;
   color: green($color: #000000);
   cursor: pointer;
-  right: -23rem;
+  right: -25rem;
   padding: 1em 2em 1em 2em;
   position: fixed;
   top: 15px;
-  height: 24em;
-  width: 20em;
+  height: 23em;
+  width: 18em;
   z-index: 99;
   
   @media #{$breakpoint-sm} {
-    height: 22em;
-    width: 19em;
-    padding: 1em 1em 1em 2em;
+    height: 21em;
+    width: 16em;
   }
   @media #{$breakpoint-min-md} {
     padding: 1em 1.5em 1em 1.5em;
   }
   @media #{$breakpoint-md} {
     height: 19.5em;
-    width: 16.5em;
+    width: 14em;
   }
   @media #{$breakpoint-lg} {
     padding: 1em 2em .6em 1.5em;
-    height: 18.5em;
-    width: 15em;
+    height: 17em;
+    width: 12.5em;
   }
   @media #{$breakpoint-xl} {
     padding: 1em 1em .8em 1.3em;
     height: 16em;
-    width: 14em;
+    width: 11em;
   }
   @media #{$breakpoint-xxl} {
-    padding: 1em 1em .5em 1em;
+    padding: 1em 1em .8em 1em;
     height: 14em;
-    width: 12em;
+    width: 9em;
   }
 }
 
@@ -277,13 +276,7 @@ $nav-toggle-z-index: 2;
 
 .social-nav-item{
   margin: .5em;
-  font-size: 1.4em;
-  @media #{$breakpoint-sm} {
-    font-size: 1.6em;
-  }
-  @media #{$breakpoint-md} {
-    font-size: 1.6em;
-  }
+  font-size: 1.3em;
   @media #{$breakpoint-lg} {
     font-size: 1.35em;
   }
@@ -299,10 +292,7 @@ $nav-toggle-z-index: 2;
    position: absolute;
    width: 100%;
    text-align: center;
-   bottom: .5em;
-   @media #{$breakpoint-lg}, #{$breakpoint-xl}, #{$breakpoint-xxl} {
-    bottom: .5em;
-  }
+   bottom: 5px;
  }
 
 
